force-app/main/default/objects/flair__Absence_Allowance_Withdrawal__c/flair__Absence_Allowance_Withdrawal__c.object-meta.xml
<CustomObject>
    <label>Absence Allowance Withdrawal</label>
    <nameField>
        <label>Absence Allowance Withdrawal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Absence Allowance Withdrawals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>