force-app/main/default/objects/flair__Absence_Allowance_Withdrawal__c/fields/flair__Absence_Allowance__c.field-meta.xml
<CustomField>
    <fullName>flair__Absence_Allowance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Absence Allowance</label>
    <referenceTo>flair__Absence_Allowance__c</referenceTo>
    <relationshipLabel>Absence Allowance Withdrawals</relationshipLabel>
    <relationshipName>Absence_Allowance_Withdrawals</relationshipName>
    <type>Lookup</type>
</CustomField>