force-app/main/default/objects/flair__Absence_Allowance_Withdrawal__c/fields/flair__Absence_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>flair__Absence_Approval_Status__c</fullName>
    <formula>TEXT(flair__Absence__r.flair__Approval_Status__c)</formula>
    <label>Absence Approval Status</label>
    <type>Text</type>
</CustomField>