force-app/main/default/objects/flair__Absence_Allowance_Withdrawal__c/fields/flair__Amount__c.field-meta.xml
<CustomField>
    <fullName>flair__Amount__c</fullName>
    <label>Amount</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>