force-app/main/default/objects/flair__Absence_Allowance_Withdrawal__c/fields/flair__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>flair__Expiration_Date__c</fullName>
    <formula>flair__Absence_Allowance__r.flair__Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>